# OncoTox

./: .gitignore  README.md  analysis.ipynb  main.py  project_notes.md  project_progress.md  pyproject.toml
docs/: TODO.md  documentation_guide.md  make_pipeline_overview.py  project_notes.md  project_progress.md
docs/steps/: 01-datasets-and-harmonization.md  02-preprocessing-and-embeddings.md  03-model-and-training-design.md  04-single-task-results.md  05-multitask-results.md  06-cross-database-integration.md  07-xai-feature-interpretability.md  08-foundation-model-and-clinical-finetuning.md
notebooks/: 02_compare_GDSC_CTRP.ipynb  03_analysis.ipynb  04_drug_coverage.ipynb  05_preprocessing.ipynb  06_verify_variants.ipynb  07_training.ipynb  README.md  analysis.ipynb  compare_GDSC_CTRP.ipynb  drug_coverage.ipynb  gdsc_drug_learnability.csv  hvg_vs_all_genes_umap.ipynb  scDAExploration.ipynb  scgpt_umap.ipynb  verify_variants.ipynb
notebooks/outputs/: ctrp_drug_learnability.csv  cv_folds.csv  cv_summary.csv  hvg_sweep.csv  matrix_all_drugs.csv  matrix_single_paclitaxel.csv  per_drug_correlation_X_pca.csv  per_drug_correlation_X_scGPT.csv  per_drug_correlation_summary.csv  per_drug_pca_vs_scgpt.csv  training_pca_vs_scgpt_summary.csv
oncotox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: dataset.py
scripts/model/: OncoMLP.py  dataset.py
scripts/preprocessing/: add_pca.py  create_splits.py  ctrp_to_h5ad.py  layout.py  run_preprocessing.py  scp542_conversion.py
scripts/training/: train_baseline.py  train_multitask.py  train_scGPT.py  training_utils.py
