[project]
name = "oncotox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "lxml>=6.0.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pytdc>=0.3.6",
    "scanpy>=1.12",
    "torch>=2.11.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
